# AlphaAgent

./: .env.template  .gitignore  00_START_HERE.md  AGENT_DEBATE_SYSTEM.md  API_EXAMPLES.md  BACKEND_README.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CSV_USAGE.md  DELIVERABLES.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.py  FINAL_TEST_REPORT.py  IMPLEMENTATION_COMPLETE.md  INDIAN_TAX_UPDATE.md  MONITORING.md  MULTI_TURN_DEBATE.md  MULTI_TURN_SUMMARY.md  NEWS_INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_DEBATE.md  README.md  STRUCTURE.md  TESTING_CHECKLIST.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TESTING_READY.md  TEST_RESULTS.md  TEST_SETUP_INDEX.md  TEST_SETUP_SUMMARY.md  TEST_SUMMARY.py  VERIFICATION_CHECKLIST.md  comprehensive_test.py  crew.py  docker-compose.yml  examples.py  integration_test.py  (+16 more)
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/agents/: compliance_checker.py  explainability_agent.py  orchestrator.py  portfolio_parser.py  replacement_recommender.py  tax_loss_identifier.py  tax_savings_calculator.py
backend/core/: agent_orchestrator.py  multi_turn_debate_system.py
backend/routes/: compliance.py  explain.py  portfolio.py  recommend.py  savings.py  tax_loss.py
backend/utils/: data_models.py  env.py  groq_client.py  logging_config.py  market_analyzer.py  market_data_fetcher.py  news_fetcher.py  paths.py  prometheus_metrics.py  recommendations.py  vector_store.py
data/market_cache/: AAPL.csv  MSFT.csv  TEST_PORTFOLIO.csv
data/test_portfolios/: income_tax_law_excerpt_india.txt  sample_portfolio.csv  sample_portfolio_2lots.csv  sample_portofolio_tax_loss_harvesting.csv  test_api_requests.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: alphaagent-dashboard.json
